--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Fun Proc Studios Webpage</h1>
+<p>Coming Soon</p>
+<a href="privacy.html" target="_blank">Privacy Policy</a> 
 </body>
 </html>
