First Design. FixMyPond Only
First Design.
FixMyPond Only

--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Fun Proc Studios Privacy Policy</title>
 </head>
@@ -13,6 +13,12 @@ This page is used to inform visitors regarding our policies with the collection,
 If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
 
 The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Fix My Pond - Water Puzzle unless otherwise defined in this Privacy Policy.</p>
+
+<h2 style="font-family:courier;">Controller’s name and contact details</h2>
+
+<p style="font-family:courier;">Controller in the sense of the General Data Protection Regulation (GDPR) and other data protection or data privacy laws in the Member States of the European Union or the European Economic Area and other guidelines with a data protection nature regarding the Services is: Funproc Yazılım Ticaret A.Ş.</p>
+<p style="font-family:courier;">Konutkent Mah. 3028.Cad. No:6/100 Çankaya/ANKARA, Türkiye</p>
+<p style="font-family:courier;">E-mail: funprocstudios@gmail.com</p>
 
 <h2 style="font-family:courier;">Information Collection and Use</h2>
 
