--- a/index.html
+++ b/index.html
@@ -1,8 +1,141 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>FunProc</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.video_center {
+    max-width: 630px; /* you have to have a size or this method doesn't work */
+    max-height: 420px;
+    position: relative; /* positions according to the nearest parent */
+    right: 0; 
+    left: 0;
+    margin: auto; /* make em equal */
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  width: 2000px;
+  margin: 10px;
+  text-align: center;
+  line-height: 36px;
+  font-size: 14px;
+}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+
+body, html {
+  height: 100%;
+  line-height: 1.8;
+}
+
+/* Full height image header */
+.bgimg-1 {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/w3images/mac.jpg");
+  min-height: 100%;
+}
+
+.w3-bar .w3-button {
+  padding: 16px;
+}
+</style>
+</head>
+
 <body>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">FunProc</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#games" class="w3-bar-item w3-button">Games</a>
+        <a href="https://www.funproc.com/privacy.html" class="w3-bar-item w3-button">Privacy</a>
+      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+    </div>
+  </div>
+</div>
+
+
 <h1>Fun Proc Studios Webpage</h1>
-<p>Coming Soon</p>
-<a href="privacy.html" target="_blank">Privacy Policy</a> 
+
+
+<div class="video_center">
+<iframe width="630" height="400" src="https://www.youtube.com/embed/flwjcTZQsxM">
+</iframe>
+</div>
+
+<!-- The App Section -->
+<div class="w3-padding-64 w3-white" id="games">
+  <div class="w3-row-padding">
+    <div class="w3-col l8 m6">
+      <h1 class="w3-xxxlarge w3-text-green"><b>Fix My Pond</b></h1>
+      <p><span class="w3-xlarge">Fix our little friend's pond.</span><br> 
+      Join an adventure that continues in multiple locations. Each location has special tricks to pass through<br>
+
+Features:<br>
+* Dynamic physic based Water Puzzle elements. <br>
+* Lots of different locations. Each locations has its own twists.<br>
+* Lots of different handcrafted levels and more are coming soon.<br></p>
+<a href="https://funproc.com" class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"><i class="fa fa-download"></i>Coming Soon</a>
+      <p>Available for <i class="fa fa-android w3-xlarge w3-text-green"></i> 
+      <i class="fa fa-apple w3-xlarge"></i> 
+      <i class="fa fa-windows w3-xlarge w3-text-blue"></i></p>
+    </div>
+    <div class="w3-col l4 m6">
+      <img src="/images/pondPhone.png" class="w3-image w3-right w3-hide-small" width="335" height="471">
+      <div class="w3-center w3-hide-large w3-hide-medium">
+        <button class="w3-button w3-block w3-padding-large" onclick="document.getElementById('download').style.display='block'">
+          <i class="fa fa-download"></i> Download Application
+        </button>
+        <img src="/w3images/img_app.jpg" class="w3-image w3-margin-top" width="335" height="471">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Contact Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
+  <h3 class="w3-center">CONTACT</h3>
+  <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
+  <div style="margin-top:48px">
+    <br>
+    <form action="mailto:contact@fixmypond.com" method="post" target="_blank">
+      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p>
+        <button class="w3-button w3-black" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </p>
+    </form>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+</footer>
+ 
+
 </body>
 </html>
