--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body, html {
 
 <body>
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
+<div class="w3-top" id="home">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home" class="w3-bar-item w3-button">FunProc</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
