--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ body, html {
   padding: 16px;
 }
 </style>
+
+  <script>
+    const dr = ["con", "fun", "pr", "@", "oc", "sub", "ject=", "Message" , "tact", ".", "com?", "to:", "mail"];
+  </script>
 </head>
 
 <body>
@@ -109,20 +113,20 @@ Features:<br>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
     <br>
-    <form action="mailto:contact@fixmypond.com" method="post" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
+    <form id="dress" method="post" enctype="text/plain">
+      <p><input  id="dress2" class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
         <button class="w3-button w3-black" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </p>
+
     </form>
   </div>
 </div>
 
+ </script>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
@@ -135,7 +139,9 @@ Features:<br>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
 </footer>
- 
+       <script>
+      document.getElementById("dress").action = dr[12]+dr[11]+dr[0]+dr[8]+dr[3]+dr[1]+dr[2]+dr[4]+dr[9]+dr[10]+dr[5]+dr[6]+dr[7];
+      </script>
 
 </body>
 </html>
