--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Features:<br>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
     <br>
-    <form id="dress" method="post" enctype="text/plain">
+    <form id="dress" method="post">
       <p><input  id="dress2" class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
