Privacy Policy and app-ads update
FixMyPond First Release Update

--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@ The terms used in this Privacy Policy have the same meanings as in our Terms and
 
 <p style="font-family:courier;">Controller in the sense of the General Data Protection Regulation (GDPR) and other data protection or data privacy laws in the Member States of the European Union or the European Economic Area and other guidelines with a data protection nature regarding the Services is: Funproc Yazılım Ticaret A.Ş.</p>
 <p style="font-family:courier;">Konutkent Mah. 3028.Cad. No:6/100 Çankaya/ANKARA, Türkiye</p>
-<p style="font-family:courier;">E-mail: funprocstudios@gmail.com</p>
+<p style="font-family:courier;">E-mail: contact@funproc.com</p>
 
 <h2 style="font-family:courier;">Information Collection and Use</h2>
 
@@ -29,6 +29,7 @@ The terms used in this Privacy Policy have the same meanings as in our Terms and
 <p style="font-family:courier;">Link to the privacy policy of third-party service providers used by the app</p>
  <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a>  </li>
  <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">Admob</a> </li>
+ <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Analytics</a> </li>
  <li><a href="https://unity3d.com/legal/privacy-policy" target="_blank">Unity</a> </li>
 
 <h2 style="font-family:courier;">Log Data</h2>
@@ -65,9 +66,9 @@ The terms used in this Privacy Policy have the same meanings as in our Terms and
 <h2 style="font-family:courier;">Changes to This Privacy Policy</h2>
 <p style="font-family:courier;">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
-<p style="font-family:courier;">This policy is effective as of 2024-07-09</p>
+<p style="font-family:courier;">This policy is effective as of 2025-05-14</p>
 
 <h2 style="font-family:courier;">Contact Us</h2>
-<p style="font-family:courier;">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at funprocstudios@gmail.com.</p>
+<p style="font-family:courier;">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at contact@funproc.com.</p>
 </body>
 </html>
