--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ body, html {
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#games" class="w3-bar-item w3-button">Games</a>
-        <a href="https://www.funproc.com/privacy.html" class="w3-bar-item w3-button">Privacy</a>
+      <a href="https://www.funproc.com/privacy.html" class="w3-bar-item w3-button">Privacy</a>
+      <a href="https://drive.google.com/drive/folders/1iGtj6eCZYPzz6supPKld4odQe0YBDkYQ?usp=drive_link" class="w3-bar-item w3-button">PressKit</a>
     </div>
   </div>
 </div>
@@ -86,7 +87,7 @@ Features:<br>
 * Dynamic physic based Water Puzzle elements. <br>
 * Lots of different locations. Each locations has its own twists.<br>
 * Lots of different handcrafted levels and more are coming soon.<br></p>
-<a href="https://funproc.com" class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"><i class="fa fa-download"></i>Coming Soon</a>
+<a href="https://play.google.com/store/apps/details?id=com.funproc.FixMyPond" class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"><img src="/images/GetItOnGooglePlay_Badge_Web_color_English.png" class="w3-image w3-right w3-hide-small" width="135" height="40"></a>
       <p>Available for <i class="fa fa-android w3-xlarge w3-text-green"></i> 
       <i class="fa fa-apple w3-xlarge"></i> 
       <i class="fa fa-windows w3-xlarge w3-text-blue"></i></p>
