--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ body, html {
 </div>
 
 <div id="home">
-<h1>Fun Proc Studios Webpage</h1>
+<h1>Fun Proc Studios</h1>
 </div>
 
 <div class="video_center">
-<iframe width="630" height="400" src="https://www.youtube.com/embed/flwjcTZQsxM">
+<iframe width="430" height="400" src="https://www.youtube.com/embed/flwjcTZQsxM">
 </iframe>
 </div>
 
@@ -89,17 +89,10 @@ Features:<br>
 * Lots of different handcrafted levels and more are coming soon.<br></p>
 <a href="https://play.google.com/store/apps/details?id=com.funproc.FixMyPond" class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"><img src="/images/GetItOnGooglePlay_Badge_Web_color_English.png" class="w3-image w3-right w3-hide-small" width="135" height="40"></a>
       <p>Available for <i class="fa fa-android w3-xlarge w3-text-green"></i> 
-      <i class="fa fa-apple w3-xlarge"></i> 
-      <i class="fa fa-windows w3-xlarge w3-text-blue"></i></p>
+     </p>
     </div>
     <div class="w3-col l4 m6">
       <img src="/images/pondPhone.png" class="w3-image w3-right w3-hide-small" width="335" height="471">
-      <div class="w3-center w3-hide-large w3-hide-medium">
-        <button class="w3-button w3-block w3-padding-large" onclick="document.getElementById('download').style.display='block'">
-          <i class="fa fa-download"></i> Download Application
-        </button>
-        <img src="/w3images/img_app.jpg" class="w3-image w3-margin-top" width="335" height="471">
-      </div>
     </div>
   </div>
 </div>
