--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ Features:<br>
 * Dynamic physic based Water Puzzle elements. <br>
 * Lots of different locations. Each locations has its own twists.<br>
 * Lots of different handcrafted levels and more are coming soon.<br></p>
-<a href="https://play.google.com/store/apps/details?id=com.funproc.FixMyPond" class="w3-button w3-light-grey w3-padding-large w3-section w3-hide-small"><img src="/images/GetItOnGooglePlay_Badge_Web_color_English.png" class="w3-image w3-right w3-hide-small" width="135" height="40"></a>
+<a href="https://play.google.com/store/apps/details?id=com.funproc.FixMyPond" ><img src="/images/GetItOnGooglePlay_Badge_Web_color_English.png"  width="135" height="40"></a>
       <p>Available for <i class="fa fa-android w3-xlarge w3-text-green"></i> 
      </p>
     </div>
     <div class="w3-col l4 m6">
-      <img src="/images/pondPhone.png" class="w3-image w3-right w3-hide-small" width="335" height="471">
+      <img src="/images/pondPhone.png"  width="335" height="471">
     </div>
   </div>
 </div>
